# avr32-newlib

./: COPYING.LIBGLOSS  COPYING.NEWLIB  ChangeLog.AVR32
newlib/: ChangeLog.AVR32  acinclude.m4  configure.host
newlib/libc/machine/: Makefile.in  configure  configure.in
newlib/libc/machine/avr32/: Makefile.am  Makefile.in  configure  memcpy.S  strcmp.S  strncpy.S
newlib/libc/sys/: Makefile.am  aclocal.m4  configure  configure.in
newlib/libc/sys/avr32/: Makefile.am  Makefile.in  configure  configure.in  crt0.S  crtfv.S  setjmp.S  syscalls.c  syscalls.h
